--- a/1. Estatística Descritiva - case.ipynb
+++ b/1. Estatística Descritiva - case.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "905f5632",
    "metadata": {},
    "outputs": [],
@@ -10,8 +10,26 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "from matplotlib import pyplot as plt\n",
-    "import scipy\n",
-    "# import datetime"
+    "import scipy"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ab95c345",
+   "metadata": {},
+   "source": [
+    "##### ***Contexto***\n",
+    "\n",
+    "Você atua como analista de dados em uma empresa de tecnologia que oferece soluções no modelo Software as a Service (SaaS). Isso significa que os clientes utilizam o sistema da empresa por meio de assinaturas, em geral com pagamentos recorrentes mensais, trimestrais ou anuais.\n",
+    "O produto principal da empresa é um sistema de ERP (Enterprise Resource Planning), um tipo de software utilizado por pequenas e médias empresas para gerenciar rotinas administrativas, como emissão de notas fiscais, controle de estoque, financeiro, entre outras.\n",
+    "Nos últimos meses, alguns colaboradores levantaram a hipótese de que a **taxa de churn (cancelamento de assinaturas) da plataforma estaria aumentando**.\n",
+    "\n",
+    "Para investigar essa possível tendência, foi disponibilizado para você um conjunto de bases de dados contendo informações sobre os assinantes e seus respectivos eventos dentro da plataforma.<br>\n",
+    "*Sua missão é*:\n",
+    "- Validar a hipótese levantada sobre o aumento do churn.\n",
+    "- Realizar uma análise exploratória para identificar padrões, comportamentos ou informações relevantes que possam apoiar a equipe de negócios.\n",
+    "- Elaborar um relatório com os principais insights obtidos.\n",
+    "\n"
    ]
   },
   {
