--- a/2. Probabilidade e Distribuição - case.ipynb
+++ b/2. Probabilidade e Distribuição - case.ipynb
@@ -14,6 +14,51 @@
   },
   {
    "cell_type": "markdown",
+   "id": "a5f79b53",
+   "metadata": {},
+   "source": [
+    "##### ***Contexto***\n",
+    "\n",
+    "Você é analista de dados júnior em um e-commerce de eletrônicos. A empresa está preparando uma campanha promocional chamada “4 Horas de Descontos”, que vai acontecer das 18h às 22h. Existem duas estratégias sendo avaliadas:\n",
+    "- Desconto fixo de 15% em todos os produtos ao longo das 4 horas de campanha.\n",
+    "- Desconto progressivo, onde o desconto aumenta ao longo do tempo (10-17%).\n",
+    "O time de marketing acredita que os descontos progressivos podem atrair mais consumidores ao longo da campanha, mas está em dúvida se essa abordagem realmente é eficaz. Eles querem sua ajuda para responder:\n",
+    "**“Os descontos progressivos realmente aumentam o faturamento ou apenas atraem mais pessoas que gastam menos?”**\n",
+    "\n",
+    "Dados disponíveis\n",
+    "- Total de usuários esperados com desconto fixo: 60.000\n",
+    "- Total de usuários esperados com desconto progressivo: 80.000\n",
+    "- Taxa média de conversão: 2%\n",
+    "- Ticket médio (sem desconto): R$ 350,00\n",
+    "- Duração da campanha: 4 horas (das 18h às 22h)\n",
+    "\n",
+    "*Socorro, e agora?* <br>\n",
+    "Para essa tarefa, vamos usar os conceitos aprendidos no módulo de probabilidade e distribuição. Temos dois cenários: um com desconto fixo, que tende a atrair um público menor e mais estável ao longo do tempo; e outro com desconto progressivo, que geralmente atrai mais pessoas, especialmente perto do fim da campanha, quando os descontos são maiores.\n",
+    "Na prática, estratégias com desconto progressivo costumam gerar mais engajamento porque criam um senso de urgência e expectativa, o cliente fica \n",
+    "acompanhando a campanha esperando o melhor momento para comprar. Por isso, podemos modelar o primeiro cenário com uma distribuição normal, concentrada no meio da campanha, e o segundo com uma distribuição assimétrica à esquerda, já que os acessos tendem a aumentar conforme o tempo passa e os descontos ficam mais atrativos.\n",
+    "\n",
+    "**Estrutura sugerida**\n",
+    "\n",
+    "\n",
+    "**1.** Estimar pedidos e faturamento com desconto fixo\n",
+    "- Considere 60.000 usuários e 15% de desconto fixo.\n",
+    "- Modele os acessos como uma distribuição normal, com pico entre 19h e 20h.\n",
+    "- Calcule o número de pedidos por hora e o faturamento total da campanha.\n",
+    "\n",
+    "**2.** Estimar pedidos e faturamento com descontos progressivos\n",
+    "- Considere 80.000 usuários e ticket ajustado conforme o horário.\n",
+    "- Modele os acessos com uma distribuição assimétrica, com mais acessos nas últimas horas.\n",
+    "- Calcule o número de pedidos por hora e o faturamento total da campanha.\n",
+    "\n",
+    "**3.** Comparar os dois cenários\n",
+    "- Monte uma tabela com o número de pedidos e receita por hora em cada cenário.\n",
+    "- Crie um gráfico comparando os faturamentos por hora.\n",
+    "- Responda: qual cenário gera maior faturamento total?\n",
+    "- A estratégia de desconto parece vantajosa do ponto de vista de receita? Justifique.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "88a2aec2",
    "metadata": {},
    "source": [
@@ -942,16 +987,34 @@
    "id": "13806bb2",
    "metadata": {},
    "source": [
-    "##### ***Insights***"
+    "##### ***Q&A***"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "6a4faf5d",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Qual cenário gera maior faturamento total?\n",
+      " R: O cenário com o desconto progressivo.\n",
+      "A estratégia de desconto parece vantajosa do ponto de vista de receita? Justifique.\n",
+      " R: Depende, se caso as peças vendidas fossem vender da mesma forma mas em mais dias e se não precisarmos do dinheiro rapido, então é mais vantajoso não dar o desconto. Agora se precisarmos do dinheiro rapido, então dar o desconto é uma boa estratégia.\n"
+     ]
+    }
+   ],
+   "source": [
+    "### perguntas e respostas\n",
+    "\n",
+    "print('Qual cenário gera maior faturamento total?\\n' \\\n",
+    "' R: O cenário com o desconto progressivo.')\n",
+    "print('A estratégia de desconto parece vantajosa do ponto de vista de receita? Justifique.\\n ' \\\n",
+    "'R: Depende, se caso as peças vendidas fossem vender da mesma forma mas em mais dias e se não precisarmos do dinheiro rapido, então é mais vantajoso não dar o desconto. Agora se precisarmos do dinheiro rapido, então dar o desconto é uma boa estratégia.')"
+   ]
   }
  ],
  "metadata": {
