--- a/9. TCC/1 - depressao.ipynb
+++ b/9. TCC/1 - depressao.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "bd150369",
    "metadata": {},
    "outputs": [],
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "5834dfe4",
    "metadata": {},
    "outputs": [],
@@ -57,8 +57,7 @@
     "\n",
     "# pessoas que responderam não saber ou não quis responder terão sua resposta trocada pela mediana\n",
     "for col in [col for col in df.columns if 'DPQ' in col]:\n",
-    "    df.loc[(df[col] == 7) | (df[col] == 9), col] = df[col].median()\n",
-    "    df.loc[(df[col] == 7) | (df[col] == 9), col] = df.loc[(df[col] == 7) | (df[col] == 9), col].astype(int)\n",
+    "    df.loc[(df[col] == 7) | (df[col] == 9), col] = int(df[col].median())\n",
     "\n",
     "df['PHQ9'] = df[[col for col in df.columns if 'DPQ' in col]].sum(axis=1)\n",
     "df['PHQ9_GROUP'] = df['PHQ9'].apply(lambda x: 'Sem sintomas' if x < 5 else 'Poucos sintomas' if x < 10 else 'Sintomas moderados a severos')\n",
@@ -118,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "ece2ab84",
    "metadata": {},
    "outputs": [
@@ -534,7 +533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "45f20dad",
    "metadata": {},
    "outputs": [
@@ -601,7 +600,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "66315820",
    "metadata": {},
    "outputs": [
@@ -652,7 +651,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "9fd2fd4c",
    "metadata": {},
    "outputs": [
@@ -738,7 +737,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "8b84433b",
    "metadata": {},
    "outputs": [
@@ -833,7 +832,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "0e310c15",
    "metadata": {},
    "outputs": [
@@ -874,7 +873,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "16e59d3d",
    "metadata": {},
    "outputs": [
@@ -1754,7 +1753,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "d28cfe41",
    "metadata": {},
    "outputs": [
@@ -1785,7 +1784,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "5e6be32c",
    "metadata": {},
    "outputs": [
@@ -1978,7 +1977,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "2ee09b50",
    "metadata": {},
    "outputs": [
@@ -2045,7 +2044,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "id": "8c077003",
    "metadata": {},
    "outputs": [
@@ -2176,7 +2175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "id": "f7da3fc2",
    "metadata": {},
    "outputs": [
@@ -2224,7 +2223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "8ccdf4b7",
    "metadata": {},
    "outputs": [
@@ -2246,7 +2245,7 @@
        "  <th>Date:</th>             <td>Mon, 03 Nov 2025</td> <th>  Prob (F-statistic):</th> <td>6.79e-40</td> \n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Time:</th>                 <td>14:59:13</td>     <th>  Log-Likelihood:    </th> <td> -6719.3</td> \n",
+       "  <th>Time:</th>                 <td>15:33:52</td>     <th>  Log-Likelihood:    </th> <td> -6719.3</td> \n",
        "</tr>\n",
        "<tr>\n",
        "  <th>No. Observations:</th>      <td>  4836</td>      <th>  AIC:               </th> <td>1.351e+04</td>\n",
@@ -2403,7 +2402,7 @@
        "\\textbf{Model:}                                   &       OLS        & \\textbf{  Adj. R-squared:    } &     0.050   \\\\\n",
        "\\textbf{Method:}                                  &  Least Squares   & \\textbf{  F-statistic:       } &     7.885   \\\\\n",
        "\\textbf{Date:}                                    & Mon, 03 Nov 2025 & \\textbf{  Prob (F-statistic):} &  6.79e-40   \\\\\n",
-       "\\textbf{Time:}                                    &     14:59:13     & \\textbf{  Log-Likelihood:    } &   -6719.3   \\\\\n",
+       "\\textbf{Time:}                                    &     15:33:52     & \\textbf{  Log-Likelihood:    } &   -6719.3   \\\\\n",
        "\\textbf{No. Observations:}                        &        4836      & \\textbf{  AIC:               } & 1.351e+04   \\\\\n",
        "\\textbf{Df Residuals:}                            &        4798      & \\textbf{  BIC:               } & 1.376e+04   \\\\\n",
        "\\textbf{Df Model:}                                &          37      & \\textbf{                     } &             \\\\\n",
@@ -2475,7 +2474,7 @@
        "Model:                            OLS   Adj. R-squared:                  0.050\n",
        "Method:                 Least Squares   F-statistic:                     7.885\n",
        "Date:                Mon, 03 Nov 2025   Prob (F-statistic):           6.79e-40\n",
-       "Time:                        14:59:13   Log-Likelihood:                -6719.3\n",
+       "Time:                        15:33:52   Log-Likelihood:                -6719.3\n",
        "No. Observations:                4836   AIC:                         1.351e+04\n",
        "Df Residuals:                    4798   BIC:                         1.376e+04\n",
        "Df Model:                          37                                         \n",
@@ -2533,7 +2532,7 @@
        "\"\"\""
       ]
      },
-     "execution_count": 16,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2551,7 +2550,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "ae65f49b",
    "metadata": {},
    "outputs": [
@@ -2747,7 +2746,7 @@
        "26      0.078      0.144  "
       ]
      },
-     "execution_count": 98,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2778,7 +2777,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 17,
    "id": "b2474aa0",
    "metadata": {},
    "outputs": [],
@@ -2789,7 +2788,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 18,
    "id": "b47b787c",
    "metadata": {},
    "outputs": [
@@ -2808,7 +2807,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 19,
    "id": "75bdd837",
    "metadata": {},
    "outputs": [
@@ -2854,7 +2853,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 20,
    "id": "57e7e437",
    "metadata": {},
    "outputs": [
@@ -2884,7 +2883,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 21,
    "id": "925cfabc",
    "metadata": {},
    "outputs": [
@@ -2894,7 +2893,7 @@
        "<Axes: >"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -2916,7 +2915,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 22,
    "id": "d443956d",
    "metadata": {},
    "outputs": [
@@ -3075,14 +3074,14 @@
     "Sobre diferenças estatisticamente significativas ou correlações fortes, indivíduos com sintomas depressivos tendem a ter o perfil:\n",
     "- baixa frequencia de exercicio aeróbico (PAG Baixo < 150 min/semana).\n",
     "- ser do gênero feminio.\n",
-    "- ter educação inferior a ensino superior completo.\n",
+    "- ter educação igual ou inferior a ensino superior completo.\n",
     "- ter uma renda familiar anual baixa.\n",
     "\n",
     "*(ANALISE MULTIVARIADA versus PHQ9)*<br>\n",
     "Sobre os coeficientes significantes da regressão linear ajustada (R2=.05=baixo) nos dados, indivíduos com sintomas depressivos tendem a ter o perfil:\n",
     "- baixa frequencia de exercicio aeróbico.\n",
     "- ser do gênero feminio.\n",
-    "- não ter educação inferior a ensino superior completo.\n",
+    "- não ter educação igual ou inferior a ensino superior completo.\n",
     "- (não perfeitamente linear) ter pouca renda familiar anual.\n",
     "- não comer fruta.\n",
     "- não consumir açucar adicional.\n",
@@ -3094,6 +3093,14 @@
     "**b)** Hábitos saudáveis de alimentação e atividade física estão associados a menores índices de depressão nesta população? <br>\n",
     "- não necessariamente de alimentação pois em analises a correlação é fraca entre o consumo versus PHQ9 e o modelo de regressão linear ajustado só podemos inferir com significância sobre açucar adicional e fruta.\n",
     "- atividade fisica sim, em ambas as analises (bivariada e multivariada) o hábito de atividade fisica traz impactos estatisticamente significativos contra o PHQ9. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "48dad0e1",
+   "metadata": {},
+   "source": [
+    "***obs critica:*** Lógicamente era de se esperar que habitos saudáveis de alimentação fosse impactar significavelmente PHQ9 mas não vemos isso com a população analisada, oque me faz pensar que talvez tenha acontecido um víes de seleção na \"construção\" dessa população, talvez pode ter acontecido de a população toda ter uma feature em comum que tenha um grande impacto negativo em PHQ9. Por exemplo: digamos que a frequencia em rede social seja algo que possui grande impacto positivo (correlação de Pearson alta) em PHQ9 e na população analisada todos possui praticamente zero frequencia em rede social, oque significa que a maioria terão PHQ9 baixo. No geral existe grande chance de existir variaveis omitidas nessa população, por exemplo: sono, hobbies, rede social, ..."
    ]
   }
  ],
