improvements bivariate analysis

--- a/9. TCC/3 - fraude.ipynb
+++ b/9. TCC/3 - fraude.ipynb
@@ -2,13 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 65,
    "id": "0d562f38",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "from statsmodels.stats.proportion import proportions_ztest\n",
+    "from scipy.stats import chi2_contingency"
    ]
   },
   {
@@ -1207,7 +1209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 9,
    "id": "3086e063",
    "metadata": {},
    "outputs": [
@@ -1295,6 +1297,278 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 96,
+   "id": "741e4952",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-- entrega documento 1\n",
+      "existe evidencias suficientes a 95.0% de confiança para rejeitar h0, dito isso p1 != p2 ~~ p-value: 0.0, z-statistic: 64.96082973641\n",
+      "\n",
+      "-- entrega documento 2\n",
+      "existe evidencias suficientes a 95.0% de confiança para rejeitar h0, dito isso p1 != p2 ~~ p-value: 1.7378714352151148e-29, z-statistic: -11.275299025746534\n",
+      "\n",
+      "-- entrega documento 3\n",
+      "existe evidencias suficientes a 95.0% de confiança para rejeitar h0, dito isso p1 != p2 ~~ p-value: 0.0, z-statistic: 41.36335368095297\n",
+      "\n",
+      "-- pais\n",
+      "existe evidencias suficientes a 95.0% de confiança para rejeitar h0, dito isso existe dependencia entre o acontecimento (fraude) e as categorias (pais) dado por pelo menos uma categoria ~~ p-value: 1.4699808658231993e-63, chi2-statistic: 41.36335368095297\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>fraude</th>\n",
+       "      <th>no_fraude</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>pais</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>AR</th>\n",
+       "      <td>-10.485900</td>\n",
+       "      <td>2.405630</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>BR</th>\n",
+       "      <td>7.835647</td>\n",
+       "      <td>-1.797621</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Others</th>\n",
+       "      <td>-0.530197</td>\n",
+       "      <td>0.121636</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>US</th>\n",
+       "      <td>-4.094487</td>\n",
+       "      <td>0.939340</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>UY</th>\n",
+       "      <td>-9.798930</td>\n",
+       "      <td>2.248029</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           fraude  no_fraude\n",
+       "pais                        \n",
+       "AR     -10.485900   2.405630\n",
+       "BR       7.835647  -1.797621\n",
+       "Others  -0.530197   0.121636\n",
+       "US      -4.094487   0.939340\n",
+       "UY      -9.798930   2.248029"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "Ellipsis"
+      ]
+     },
+     "execution_count": 96,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = .05\n",
+    "\n",
+    "print('-- entrega documento 1')\n",
+    "\n",
+    "sucessos = [df[df['entrega_doc_1']==0]['fraude'].sum(), df[df['entrega_doc_1']==1]['fraude'].sum()] # = fraudes\n",
+    "ns = [df[df['entrega_doc_1']==0].shape[0], df[df['entrega_doc_1']==1].shape[0]]\n",
+    "z_stat, p_value = proportions_ztest(sucessos, ns)\n",
+    "# h0: proporções iguais\n",
+    "# ha: proporções diferentes\n",
+    "\n",
+    "if p_value <= a: print(f'existe evidencias suficientes a {(1-a)*100}% de confiança para rejeitar h0, dito isso p1 != p2 ~~ p-value: {p_value}, z-statistic: {z_stat}')\n",
+    "else: print(f'não existe evidencias suficientes a {(1-a)*100}% de confiança para rejeitar h0, p-value: {p_value}, z-statistic: {z_stat}')\n",
+    "\n",
+    "print()\n",
+    "print('-- entrega documento 2')\n",
+    "\n",
+    "sucessos = [df[df['entrega_doc_2']==0]['fraude'].sum(), df[df['entrega_doc_2']==1]['fraude'].sum()] # = fraudes\n",
+    "ns = [df[df['entrega_doc_2']==0].shape[0], df[df['entrega_doc_2']==1].shape[0]]\n",
+    "z_stat, p_value = proportions_ztest(sucessos, ns)\n",
+    "# h0: proporções iguais\n",
+    "# ha: proporções diferentes\n",
+    "\n",
+    "if p_value <= a: print(f'existe evidencias suficientes a {(1-a)*100}% de confiança para rejeitar h0, dito isso p1 != p2 ~~ p-value: {p_value}, z-statistic: {z_stat}')\n",
+    "else: print(f'não existe evidencias suficientes a {(1-a)*100}% de confiança para rejeitar h0, p-value: {p_value}, z-statistic: {z_stat}')\n",
+    "\n",
+    "print()\n",
+    "print('-- entrega documento 3')\n",
+    "\n",
+    "sucessos = [df[df['entrega_doc_3']==0]['fraude'].sum(), df[df['entrega_doc_3']==1]['fraude'].sum()] # = fraudes\n",
+    "ns = [df[df['entrega_doc_3']==0].shape[0], df[df['entrega_doc_3']==1].shape[0]]\n",
+    "z_stat, p_value = proportions_ztest(sucessos, ns)\n",
+    "# h0: proporções iguais\n",
+    "# ha: proporções diferentes\n",
+    "\n",
+    "if p_value <= a: print(f'existe evidencias suficientes a {(1-a)*100}% de confiança para rejeitar h0, dito isso p1 != p2 ~~ p-value: {p_value}, z-statistic: {z_stat}')\n",
+    "else: print(f'não existe evidencias suficientes a {(1-a)*100}% de confiança para rejeitar h0, p-value: {p_value}, z-statistic: {z_stat}')\n",
+    "\n",
+    "print()\n",
+    "print('-- pais')\n",
+    "\n",
+    "_df = df.groupby(['pais'])['fraude'].agg(['sum','count'])\n",
+    "_df.columns = ['fraude','no_fraude']\n",
+    "_df['no_fraude'] = _df['no_fraude']-_df['fraude']\n",
+    "chi2_stat, p_value, _, expected = chi2_contingency(_df)\n",
+    "# h0: não existe dependencia entre o acontecimento (fraude) e as categorias (pais)\n",
+    "# h1: existe dependencia entre o acontecimento (fraude) e as categorias (pais) dado por pelo menos uma categoria\n",
+    "\n",
+    "if p_value <= a: print(f'existe evidencias suficientes a {(1-a)*100}% de confiança para rejeitar h0, dito isso existe dependencia entre o acontecimento (fraude) e as categorias (pais) dado por pelo menos uma categoria ~~ p-value: {p_value}, chi2-statistic: {z_stat}')\n",
+    "else: print(f'não existe evidencias suficientes a {(1-a)*100}% de confiança para rejeitar h0, p-value: {p_value}, chi2-statistic: {z_stat}')\n",
+    "\n",
+    "# POSTHOC ~ residuos padronizados (para alpha=5% usar residuo > |2| = significante)\n",
+    "df_residuos = pd.DataFrame((_df.values - expected) / (expected**.5), index=_df.index, columns=_df.columns)\n",
+    "display(df_residuos)\n",
+    "\n",
+    "print()\n",
+    "..."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7ef41186",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "_df = df.groupby(['pais'])['fraude'].agg(['sum','count'])\n",
+    "_df.columns = ['fraude','no_fraude']\n",
+    "_df['no_fraude'] = _df['no_fraude']-_df['fraude']\n",
+    "\n",
+    "chi2_stat, p_value, _, expected = chi2_contingency(_df)\n",
+    "p_value\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f3145598",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>fraude</th>\n",
+       "      <th>no_fraude</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>pais</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>AR</th>\n",
+       "      <td>-10.485900</td>\n",
+       "      <td>2.405630</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>BR</th>\n",
+       "      <td>7.835647</td>\n",
+       "      <td>-1.797621</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Others</th>\n",
+       "      <td>-0.530197</td>\n",
+       "      <td>0.121636</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>US</th>\n",
+       "      <td>-4.094487</td>\n",
+       "      <td>0.939340</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>UY</th>\n",
+       "      <td>-9.798930</td>\n",
+       "      <td>2.248029</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           fraude  no_fraude\n",
+       "pais                        \n",
+       "AR     -10.485900   2.405630\n",
+       "BR       7.835647  -1.797621\n",
+       "Others  -0.530197   0.121636\n",
+       "US      -4.094487   0.939340\n",
+       "UY      -9.798930   2.248029"
+      ]
+     },
+     "execution_count": 88,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "id": "13f850f6",
    "metadata": {},
@@ -1304,7 +1578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 10,
    "id": "9b44ad6b",
    "metadata": {},
    "outputs": [],
@@ -1317,7 +1591,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 11,
    "id": "5c7dc030",
    "metadata": {},
    "outputs": [
@@ -1382,7 +1656,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 12,
    "id": "174fb83e",
    "metadata": {},
    "outputs": [],
@@ -1394,7 +1668,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 13,
    "id": "2d3a5893",
    "metadata": {},
    "outputs": [
